2012-01-02  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testMessageDispatcher.cpp: Update testcase.

	* include/mcs/NewOutputDispatcher.h: Add infinite loop.
	* include/mcs/RequestDispatcher.h: Add infinite loop.

	* include/mcs/NewBaseDispatcher.h: Fix some small bugs.

	* src/mcs/QueryID.cpp: Encode SHUTDOWN flag into query_id.
	* include/mcs/QueryID.h: Likewise.
	* testsuite/testID: Update testcase.

2012-01-01  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testMessageDispatcher.cpp: On making testcase for the dispatchers.

	* include/network/NewConcurrentMessageDispatcher.h: Add OUTPUT_MQ type.

	* include/mcs/QueryID.h: Encode neighbor_offset into query_id.

	* src/mcs/QueryID.cpp: Likewise.

	* testsuite/testID.cpp: Update testcase.

	* include/mcs/ForwardMessage.h: Add a comment.

	* testsuite/testBeliefState.cpp: Add testcase for removing duplication.

	* include/mcs/ReturnedBeliefState.h: New file.
	* src/mcs/ReturnedBeliefState.cpp: Likewise.
	* include/mcs/BackwardMessage.h: Likwise.
	* src/mcs/BackwardMessage.cpp: Likwise.
	* include/mcs/JoinIn.h: Likewise.
	* include/mcs/NewBaseDispatcher: Likewie.
	* include/mcs/NewOutputDispatcher: Likewise.
	* include/mcs/RequestDispatcher: Likewise.

	* include/mcs/Printhelpers.h: Add printlist.

	* include/mcs/Makefile.am: Add ReturnedBeliefState.h, BackwardMessage.h.
	* src/mcs/Makefile.am: Add ReturnedBeliefState.cpp, BackwardMessage.cpp.

2011-12-29  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/Belief.h: Add ctx_id().

	* src/network/NewConcurrentMessageDispatcher.cpp: Move creation of mqs to ctor.

	* testsuite/testMessageDispatcher.cpp: New file.

	* testsuite/Makefile.am: add testMessageDispatcher.

	* src/mcs/Makefile.am: Add ForwardMessage.cpp.
	* incle/mcs/Makefile.am: Add NewMessage.h and ForwardMessage.h.

	* include/network/NewConcurrentMessageDispatcher.tcc: Return value.

	* include/network/ConcurrentMessageQueue.h: New typedef for 2-dimensional
	vector of ConcurrentMessageQueue.
